# code-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  chainlit.md  pyproject.toml
.chainlit/: config.toml
agent/: code_explainer.py  codegen.py  config.py  github_agent.py  rag.py
public/scripts/: script.md
